# payment_clictopay

./: LICENSE  README.md  pyproject.toml  pytest.ini
indico_payment_clictopay/: blueprint.py  controllers.py  plugin.py  util.py
indico_payment_clictopay/templates/: event_payment_form.html  event_settings_encoding_warning.html  transaction_details.html
indico_payment_clictopay/translations/: messages.pot
indico_payment_clictopay/translations/fr_FR/LC_MESSAGES/: messages.po
