[project]
name = 'indico-plugin-payment-clictopay'
description = 'ClicToPay payments for Indico event registration fees'
readme = 'README.md'
version = '1.0.0'
license = 'MIT'
authors = [{ name = 'DeMiro5001', email = 'amir@abdelhedi.ovh' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3']

[project.urls]
GitHub = 'https://github.com/your-repo/indico-plugin-payment-clictopay'

[project.entry-points.'indico.plugins']
payment_clictopay = 'indico_payment_clictopay.plugin:ClicToPayPlugin'

[build-system]
requires = ['hatchling==1.26.3']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_payment_clictopay']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = '../hatch_build.py'
dependencies = ['babel==2.16.0']
